# gorev_5

./: README.md  ReadMe.txt
install/: local_setup.sh  setup.sh
install/turtlefollow/lib/turtlefollow/: turtle_creation_service  turtle_follow_service
install/turtlefollow/share/turtlefollow/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/turtlefollow/: package.xml  package.xml.save  setup.cfg  setup.py
src/turtlefollow/srv/: CreateTurtles.srv  FollowTurtle.srv
src/turtlefollow/turtlefollow/srv/: CreateTurtles.srv  FollowTurtle.srv
